gitops/base/converter-ui/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-ui
spec:
  selector:
    app: converter-ui
  ports:
  - name: converter-ui
    protocol: TCP
    port: 8080
    targetPort: 80
